edition = "2023";  // successor to proto2 and proto3

package central;

import "storage/service_identity.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message LocalScannerCertsIssueError {
  string message = 1;
}

message IssueLocalScannerCertsRequest {
  string request_id = 1;
}

message IssueLocalScannerCertsResponse {
  string request_id = 1;
  oneof response {
    storage.TypedServiceCertificateSet certificates = 2 [lazy = true];
    LocalScannerCertsIssueError error = 3;
  }
}
