edition = "2023";  // successor to proto2 and proto3

package central;

import "storage/service_identity.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message SecuredClusterCertsIssueError {
  string message = 1;
}

message IssueSecuredClusterCertsRequest {
  string request_id = 1;
  // Optional: hex-encoded SHA-512_256 fingerprint of the Sensor's currently trusted CA
  string ca_fingerprint = 2;
}

message IssueSecuredClusterCertsResponse {
  string request_id = 1;
  oneof response {
    storage.TypedServiceCertificateSet certificates = 2 [lazy = true];
    SecuredClusterCertsIssueError error = 3;
  }
}
